Update media source paths in index.html

--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ footer{
   <div class="section-kicker">мультимедиа</div>
   <h2>Парк в движении и звуке</h2>
   <div class="media">
-    <video controls src="/Users/mametzanovasaara/Downloads/5542599691851847164.MP4"></video>
-    <audio controls src="/Users/mametzanovasaara/Downloads/823080709 2.mp3"></audio>
+    <video controls src="/Users/mametzanovasaara/Downloads/TLauncher/5542599691851847164.MP4"></video>
+    <audio controls src="/Users/mametzanovasaara/Downloads/TLauncher/audio_5d66d3921b.mp3"></audio>
   </div>
 </div>
 
