--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ footer{
   <div class="section-kicker">мультимедиа</div>
   <h2>Парк в движении и звуке</h2>
   <div class="media">
-    <video controls src="/Users/mametzanovasaara/Downloads/TLauncher/5542599691851847164.MP4"></video>
-    <audio controls src="/Users/mametzanovasaara/Downloads/855555.mp3"></audio>
+    <video controls src="https://drive.google.com/file/d/1JWqLfHlZSjpT_gck4PAfvOdOrWON68AT/view?usp=sharing"></video>
+    <audio controls src="https://drive.google.com/file/d/1NgBDWRbdekingLXfQSpVmtMcRLE8g_pd/view?usp=sharing"></audio>
   </div>
 </div>
 
