--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ footer{
   <div class="section-kicker">мультимедиа</div>
   <h2>Парк в движении и звуке</h2>
   <div class="media">
-    <video controls src="https://drive.google.com/file/d/1JWqLfHlZSjpT_gck4PAfvOdOrWON68AT/view?usp=sharing"></video>
-    <audio controls src="https://drive.google.com/file/d/1NgBDWRbdekingLXfQSpVmtMcRLE8g_pd/view?usp=sharing"></audio>
+    <video controls src="https://drive.google.com/uc?export=download&id=1JWqLfHlZSjpT_gck4PAfvOdOrWON68AT"></video>
+    <audio controls src="https://drive.google.com/uc?export=download&id=1NgBDWRbdekingLXfQSpVmtMcRLE8g_pd"></audio>
   </div>
 </div>
 
