--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ footer{
   <div class="section-kicker">мультимедиа</div>
   <h2>Парк в движении и звуке</h2>
   <div class="media">
-    <video controls src="https://disk.yandex.ru/i/IyrqA5YaiHTZaA"></video>
-    <audio controls src="https://disk.yandex.ru/d/mB4PyEm0YFzysg"></audio>
+    <video controls src="https://yadi.sk/i/IyrqA5YaiHTZaA"></video>
+    <audio controls src="https://yadi.sk/d/mB4PyEm0YFzysg"></audio>
   </div>
 </div>
 
