Update media sources in index.html

--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ footer{
   <div class="section-kicker">мультимедиа</div>
   <h2>Парк в движении и звуке</h2>
   <div class="media">
-    <video controls src="https://streamable.com/vqf4en"></video>
-    <audio controls src="https://voca.ro/1gcnaHKR4a4D"></audio>
+    <video controls src="park-video.mp4"></video>
+    <audio controls src="park-audio.mp3"></audio>
   </div>
 </div>
 
